# dashboard

./: pyproject.toml
src/dashboard/: app.py  dashboard.tcss  main.py
src/dashboard/collectors/: __init__.py  health_collector.py  slurm_collector.py
src/dashboard/database/: __init__.py  storage.py
src/dashboard/models/: __init__.py  cluster_state.py
src/dashboard/widgets/: __init__.py  node_table.py
